fix: inline syntax snippets background in dark mode

--- a/embedded-focus-site/assets/scss/custom.scss
+++ b/embedded-focus-site/assets/scss/custom.scss
@@ -1,6 +1,6 @@
 // Add your own custom styles here
 code {
-    @apply bg-gray-100;
+    @apply bg-gray-100 dark:bg-gray-800;
 }
 
 blockquote {
